[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "repotrust-radar"
version = "0.1.0"
description = "Lightweight trust scoring heuristics for GitHub repositories."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RepoTrust Radar Authors" }]
keywords = ["github", "security", "supply-chain", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
repotrust = "repotrust_radar.main:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
